# entoureoAutoTranscriptCleaner

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/: config.py  container.py  scraping_test_script.py
src/repositories/: scrapper.py  text_smoother.py  texts_database.py
src/scripts/: text_smoother_development.py
